--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div id="loader">
+  <div class="spinner"></div>
+</div>
     <!-- Navigation -->
     <nav>
         <div class="nav-links">
