--- a/projectDetail.html
+++ b/projectDetail.html
@@ -7,11 +7,50 @@
   <title>Bhargav Sutariya</title>
   <link rel="icon" type="image/png" href="./images/logo.svg">
   <style>
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
+    /* Fullscreen Loader */
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff; /* your portfolio background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease-out, visibility 0.5s ease-out;
+}
+
+/* Spinner */
+.spinner {
+  width: 60px;
+  height: 60px;
+  border: 6px solid #ccc;
+  border-top-color: #000; /* primary color */
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* Hide Loader */
+#loader.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+
 
     :root {
       --color-heading: #ffffff;
@@ -284,6 +323,10 @@
 </head>
 
 <body>
+  <div id="loader">
+  <div class="spinner"></div>
+</div>
+
   <header class="detail-header">
     <a href="index.html" class="back-link">← Back to Portfolio</a>
   </header>
@@ -413,6 +456,13 @@
     // Initialize
     createCarouselDots();
     setInterval(nextImage, 5000);
+
+
+    // loader
+    window.addEventListener("load", () => {
+      const loader = document.getElementById("loader");
+      loader.classList.add("hide");
+    });
 
   </script>
 </body>
