--- a/projectDetail.html
+++ b/projectDetail.html
@@ -5,6 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bhargav Sutariya</title>
+
+      <!-- SEO Meta Tags -->
+    <meta name="description" content="Bhargav Sutariya - UI/UX Designer with 10+ years of experience specializing in user-centered design, responsive interfaces, and digital product strategy.">
+    <meta name="keywords" content="UI UX Designer, Web Design, Product Designer, Bhargav Sutariya, User Experience, User Interface, Figma Designer, Portfolio">
+    <meta name="author" content="Bhargav Sutariya">
+
+    <!-- Social Sharing (Open Graph) -->
+    <meta property="og:title" content="Bhargav Sutariya - UI/UX Designer">
+    <meta property="og:description" content="Expert UI/UX Designer with 10+ years of experience in creating meaningful digital experiences.">
+    <meta property="og:image" content="./images/preview-image.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourwebsite.com">
+
+
   <link rel="icon" type="image/png" href="./images/logo.svg">
   <style>
 
